# fcd2b123d

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  SPEC.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
data/parts-library/: README.md  coverage.json
docs/: autonomous-decisions.md  roadmap.md
docs/adr/: 0001-freecad-runtime-vs-standalone-parser.md  0002-property-based-regression-tests.md  0003-no-pip-path-in-v1.md  0004-excluded-geometric-properties.md
docs/design/: corpus-mirror.md  emit-code-quality.md  emit-style-guide.md  family-extraction.md
docs/examples/: hex_cap_screw.build123d.stl  hex_cap_screw.freecad.stl  hex_cap_screw.py  partdesign_example.build123d.stl  partdesign_example.freecad.stl  partdesign_example.py
docs/strategy/: derivative-libraries.md
families/: din_1025_2_he_b.yaml  en_10058.yaml
src/fcstd2b123d/: __init__.py  __main__.py  cli.py  context.py  emitter.py  errors.py  family.py  family_extract.py  freecad_properties.py  hausdorff.py  loader.py  parametric.py  partdesign.py  primitives.py  runtime.py  shape_import.py  sketch.py  sketch_snap.py  snapshot.py  tier5_boolean.py  translator.py  verify.py  verify_cli.py
tests/: snapshot.py  test_compare.py  test_corpus_count_floor.py  test_emit_quality.py  test_emitted_code_quality.py  test_family_extract.py  test_family_manifest.py  test_json_sidecar.py  test_properties.py  test_translator_corpus.py  test_translator_parametric.py  test_translator_tier1.py  test_translator_tier2.py  test_translator_tier3.py  test_translator_tier4.py  test_translator_tier5.py  test_translator_tier5_booleans.py  test_translator_tier5_compound.py  test_verify_cli.py
tests/fixtures/manifests/: minimal.yaml
tests/fixtures/sample_2026/: 2x18-female-pin-header.expected.json  2x18-female-pin-header.pointcloud.json  3pin-female-2_54mm-connector.expected.json  (+244 more)
tests/utils/: compare.py  hausdorff.py  properties.py
tools/: analyze_fcstd.py  build_coverage_database.py  corpus_run_translation.py  corpus_validate.py  preflight.sh  render_example.py  sample_random_library.py  summarize_analysis.py  synthesize_fixtures.py
(+705 files in other folders)
