[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fcstd2b123d"
version = "0.1.0"
description = "Translate FreeCAD .FCStd files to build123d Python"
requires-python = ">=3.10"
dependencies = [
    "build123d",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fcstd2b123d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
