[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fcstd2b123d"
version = "0.1.0"
description = "Translate FreeCAD .FCStd files to build123d Python"
requires-python = ">=3.10"
dependencies = [
    "build123d",
    "numpy",
    "black",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
]

[project.scripts]
fcstd2b123d = "fcstd2b123d.cli:main"
fcstd2b123d-verify = "fcstd2b123d.verify_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fcstd2b123d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Parallel test execution via pytest-xdist. ``-n auto`` matches CPU count;
# subprocess-per-test FreeCAD calls are the dominant cost in the corpus
# suite (#123), so parallelising at the pytest level gives a near-linear
# speedup on multi-core machines. CI runs on 2-core runners so the
# speedup there is ~40%; locally on more cores it's larger.
addopts = "-n auto"
